[gd_scene load_steps=4 format=2]

[ext_resource path="res://styleboxes/sb_default_textbox.tres" type="StyleBox" id=1]
[ext_resource path="res://fonts/determination_mono.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ux_textbox_default.gd" type="Script" id=3]

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -345.0
margin_top = -261.0
margin_right = 345.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="TextboxContainer"]
margin_right = 690.0
margin_bottom = 233.0
custom_styles/panel = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 690.0
margin_bottom = 233.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Content" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 670.0
margin_bottom = 213.0

[node name="Asterisk" type="Label" parent="TextboxContainer/MarginContainer/Content"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "*"
align = 1

[node name="Message" type="Label" parent="TextboxContainer/MarginContainer/Content"]
margin_left = 34.0
margin_right = 650.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
custom_fonts/font = ExtResource( 2 )
text = "For some reason, an actual, real message didn't load here."
autowrap = true
clip_text = true

[node name="Tween" type="Tween" parent="."]

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.4117
margin_top = -105.894
margin_right = 108.588
margin_bottom = -85.8936
text = "print the message"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 405.033
margin_top = 195.811
margin_right = 473.033
margin_bottom = 215.811
text = "showbox"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
